// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accession /> should render the accession component for UniProt proteome 1`] = `
<div>
  Accession
  :
   
  <ProteomeLink
    id="UP000000278"
  >
    UP000000278
  </ProteomeLink>
</div>
`;

exports[`<Accession /> should render the accession component for UniProt reviewed 1`] = `
<div>
  Accession
  :
   
  <UniProtLink
    id="A0A023GPI8"
  >
    A0A023GPI8
  </UniProtLink>
   (LECA_CANBL)
</div>
`;

exports[`<Accession /> should render the accession component for UniProt reviewed 2`] = `
<div>
  Accession
  :
   
  <UniProtLink
    id="A0A023GPI8"
  >
    A0A023GPI8
  </UniProtLink>
</div>
`;

exports[`<Accession /> should render the accession component for UniProt unreviewed 1`] = `
<div>
  Accession
  :
   
  <UniProtLink
    id="A0A1S2IFJ5"
  >
    A0A1S2IFJ5
  </UniProtLink>
   (A0A1S2IFJ5_9MICO)
</div>
`;

exports[`<Accession /> should render the accession component for UniProt unreviewed 2`] = `
<div>
  Accession
  :
   
  <UniProtLink
    id="A0A1S2IFJ5"
  >
    A0A1S2IFJ5
  </UniProtLink>
</div>
`;

exports[`<Accession /> should render the accession component for other 1`] = `
<div>
  Accession
  :
   
  <Default
    id="iprscan5-R20171012-151028-0135-99171282-p1m"
  >
    iprscan5-R20171012-151028-0135-99171282-p1m
  </Default>
</div>
`;

exports[`<Accession /> should render the accession component for taxon 1`] = `
<div>
  Accession
  :
   
  <Default
    id={1}
  >
    1
  </Default>
</div>
`;
